# amazon-bedrock-agentcore-samples

./: GUIDE.md
01-tutorials/06-AgentCore-observability/: README.md
01-tutorials/06-AgentCore-observability/01-Agentcore-runtime-hosted/: README.md
01-tutorials/09-AgentCore-E2E/: lab-01-create-an-agent.ipynb  lab-02-agentcore-memory.ipynb  lab-04-agentcore-runtime.ipynb  lab-05-agentcore-evals.ipynb
01-tutorials/09-AgentCore-E2E/lab_helpers/: utils.py
02-use-cases/customer-support-assistant-vpc/agent/: requirements.txt
02-use-cases/finance-personal-assistant/: requirements.txt
05-blueprints/customer-support-agent-with-agentcore/: .gitignore  Config  Dockerfile  README.md  pyproject.toml
05-blueprints/customer-support-agent-with-agentcore/cdk/: .gitignore  cdk.json  package-lock.json  package.json
05-blueprints/customer-support-agent-with-agentcore/cdk/lib/: types.ts
05-blueprints/customer-support-agent-with-agentcore/cdk/lib/stacks/: agentcore-stack.ts  docker-image-stack.ts  index.ts
05-blueprints/customer-support-agent-with-agentcore/mcp/lambda/: customer_handler.py  handler.py  order_handler.py  requirements.txt
05-blueprints/customer-support-agent-with-agentcore/scripts/: cognito-user.py  deploy.sh  teardown.sh
05-blueprints/customer-support-agent-with-agentcore/src/: main.py
05-blueprints/customer-support-agent-with-agentcore/src/mcp_client/: client.py
05-blueprints/customer-support-agent-with-agentcore/src/model/: load.py
05-blueprints/customer-support-agent-with-agentcore/test/: test_main.py
xue-docs/: GUIDE.md
(+22 files in other folders)
